added dark theme and Blackout Button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="header-buttons">
       <button id="importBtn" class="btn btn-secondary">📁 Songs importieren</button>
+      <button id="blackoutBtn" class="btn btn-secondary">⬛ Blackout</button>
       <button id="toggleBtn" class="btn">Display einschalten</button>
     </div>
   </div>
