--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'">
-  <title>Lyrics Display Control</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="header">
-    <div>
-      <h1>🎵 Lyrics Display Control</h1>
-      <div id="status" class="status-off">Display ist aus</div>
-    </div>
-    <div class="header-buttons">
-      <button id="importBtn" class="btn btn-secondary">📁 Songs importieren</button>
-      <button id="blackoutBtn" class="btn btn-secondary">⬛ Blackout</button>
-      <button id="toggleBtn" class="btn">Display einschalten</button>
-    </div>
-  </div>
-  
-  <div class="content">
-    <div class="sidebar">
-      <h3>Song Liste <span class="song-count" id="songCount">0</span></h3>
-      <ul id="songList" class="song-list"></ul>
-    </div>
-    
-    <div class="main-area">
-      <div id="versesContainer"></div>
-    </div>
-  </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src 'self'; script-src 'self'; style-src 'self'"
+        />
+        <title>Live Lyrics Control</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="header">
+            <div>
+                <h1>🎵 Live Lyrics Control</h1>
+                <div id="status" class="status-off">Display ist aus</div>
+            </div>
+            <div class="header-buttons">
+                <button id="importBtn" class="btn btn-secondary">
+                    📁 Songs importieren
+                </button>
+                <button id="blackoutBtn" class="btn btn-secondary">
+                    ⬛ Blackout
+                </button>
+                <button id="toggleBtn" class="btn">Display einschalten</button>
+            </div>
+        </div>
 
-  <script src="renderer.js"></script>
-</body>
+        <div class="content">
+            <div class="sidebar">
+                <h3>
+                    Song Liste <span class="song-count" id="songCount">0</span>
+                </h3>
+                <ul id="songList" class="song-list"></ul>
+            </div>
+
+            <div class="main-area">
+                <div id="versesContainer"></div>
+            </div>
+        </div>
+
+        <script src="renderer.js"></script>
+    </body>
 </html>
